Fix large images wrapped in an hyperlink

--- a/source/css/components/article.css
+++ b/source/css/components/article.css
@@ -81,7 +81,7 @@ article.article .post__content ul {
   list-style: inside;
 }
 
-article.article .post__content p > img {
+article.article .post__content p img {
   border: 1rem solid var(--light-accent);
   max-width: 100%;
   box-sizing: border-box;
